--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="hint_text_color">#B8B8B8</color>
 
     <color name="flat_blue">#3498db</color>
+    <color name="flat_blue_dark">#0F85D1</color>
     <color name="flat_green">#5CBC6B</color>
     <color name="flat_green_dark">#43A047</color>
     <color name="flat_pink">#f67280</color>
