--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,12 +8,22 @@
         <item name="colorControlActivated">@color/accent_dark</item>
         <item name="colorControlHighlight">@color/accent_dark</item>
 
-        <item name="colorPrimary">@color/accent</item>
-        <item name="colorPrimaryDark">@color/accent_dark</item>
+        <item name="colorPrimary">@color/flat_blue</item>
+        <item name="colorPrimaryDark">@color/flat_blue</item>
         <item name="android:windowNoTitle">true</item>
         <item name="windowActionBar">false</item>
         <item name="windowActionModeOverlay">true</item>
+        <item name="android:windowActionBarOverlay">true</item>
     </style>
 
+    <style name="SlidingLayoutTab" parent="AppTheme">
+        <item name="android:textColor">#fff</item>
+        <item name="android:textColorPrimary">#fff</item>
+    </style>
 
+    <style name="SlidingLayoutTabPopUp" parent="AppTheme">
+        <item name="android:textColorPrimary">#fff</item>
+        <item name="actionMenuTextColor">#fff</item>
+        <item name="android:background">@color/flat_blue_dark</item>
+    </style>
 </resources>
