--- a/app/src/main/res/layout/upcoming_wc_card.xml
+++ b/app/src/main/res/layout/upcoming_wc_card.xml
@@ -7,6 +7,8 @@
     android:layout_marginRight="5dp"
     android:layout_marginBottom="5dp"
     android:layout_height="match_parent">
+
+
     <com.andexert.library.RippleView
         android:id="@+id/more"
         android:layout_width="wrap_content"
@@ -20,12 +22,15 @@
             android:layout_gravity="center"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            card_view:cardCornerRadius="4dp"
-            android:clickable="true" >
+            card_view:cardCornerRadius="4dp" >
 
             <RelativeLayout
+                android:clickable="true"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
+
+
+
                 <ImageView
                     android:src="@drawable/wp_icon"
                     android:id="@+id/up_image_icon"
@@ -49,8 +54,8 @@
                     android:layout_marginLeft="10dp"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" />
-            </RelativeLayout>
 
+            </RelativeLayout>
         </android.support.v7.widget.CardView>
     </com.andexert.library.RippleView>
 </LinearLayout>
