--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,11 +14,17 @@
         <item name="windowActionBar">false</item>
         <item name="windowActionModeOverlay">true</item>
         <item name="android:windowActionBarOverlay">true</item>
+        <item name="android:fitsSystemWindows">true</item>
     </style>
 
     <style name="SlidingLayoutTab" parent="AppTheme">
         <item name="android:textColor">#fff</item>
         <item name="android:textColorPrimary">#fff</item>
+    </style>
+    <style name="WCDetails" parent="AppTheme">
+        <item name="android:textColor">#fff</item>
+        <item name="android:textColorPrimary">#fff</item>
+
     </style>
 
     <style name="SlidingLayoutTabPopUp" parent="AppTheme">
