--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,7 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="tab_height">48dp</dimen>
     <dimen name="toolbar_elevation">4dp</dimen>
+    <dimen name="list_elevation">8dp</dimen>
     <dimen name="nav_item_top_margin">8dp</dimen>
     <dimen name="drawer_width">304dp</dimen>
 </resources>
