--- a/app/src/main/res/layout/fragment_wcdetails_overview.xml
+++ b/app/src/main/res/layout/fragment_wcdetails_overview.xml
@@ -26,6 +26,7 @@
             android:id="@+id/centerLayoutDetail"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
+            android:layout_marginTop="-30dp"
             android:padding="4dp"
             android:background="#fff"
             android:orientation="vertical"
