--- a/app/src/main/res/menu/menu_base_act.xml
+++ b/app/src/main/res/menu/menu_base_act.xml
@@ -3,4 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools" tools:context=".BaseActivity">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
+
+    <item android:id="@+id/action_refresh" android:title="@string/action_refresh" app:showAsAction="always" />
 </menu>
