fetching + sync speakers, added proper UI for speakers

--- a/app/src/main/res/menu/menu_wc_detail.xml
+++ b/app/src/main/res/menu/menu_wc_detail.xml
@@ -3,6 +3,9 @@
     <item android:id="@+id/action_attending" android:title="@string/item_attending"
         android:icon="@drawable/ic_stars_white_36dp"
         app:showAsAction="always" />
+    <item android:id="@+id/action_refresh" android:title="Refresh"
+        android:icon="@drawable/abc_ic_menu_copy_mtrl_am_alpha"
+        app:showAsAction="always" />
     <item android:id="@+id/item_menu_sponsor" android:title="@string/item_sponsor"
         android:orderInCategory="50" app:showAsAction="never" />
     <item android:id="@+id/item_menu_organiser" android:title="@string/item_organisers"
