--- a/app/src/main/res/layout/fragment_wcdetails_overview.xml
+++ b/app/src/main/res/layout/fragment_wcdetails_overview.xml
@@ -16,6 +16,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content">
             <ImageView
+                android:id="@+id/featuredImage"
                 android:src="@drawable/wclondon"
                 android:layout_width="fill_parent"
                 android:scaleType="fitXY"
