--- a/app/src/main/res/layout/upcoming_wc_card.xml
+++ b/app/src/main/res/layout/upcoming_wc_card.xml
@@ -26,8 +26,8 @@
                     android:src="@drawable/wp_icon"
                     android:id="@+id/wcIcon"
                     android:layout_centerVertical="true"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp" />
+                    android:layout_width="56dp"
+                    android:layout_height="56dp" />
                 <TextView
                     android:textSize="20sp"
                     android:id="@+id/up_wc_title"
@@ -45,7 +45,12 @@
                     android:layout_marginLeft="10dp"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" />
-
+                <ImageView
+                    android:layout_marginRight="10dp"
+                    android:layout_alignParentRight="true"
+                    android:src="@drawable/ic_bookmark_outline_grey600_36dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
             </RelativeLayout>
         </android.support.v7.widget.CardView>
 </LinearLayout>
