add proper margin to dp

--- a/app/src/main/res/layout/speaker_deatils.xml
+++ b/app/src/main/res/layout/speaker_deatils.xml
@@ -5,6 +5,7 @@
     <ImageView
         android:layout_marginLeft="16dp"
         android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:id="@+id/speaker_details_dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
