--- a/app/src/main/res/layout/upcoming_wc_card.xml
+++ b/app/src/main/res/layout/upcoming_wc_card.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    xmlns:ripple="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_marginLeft="5dp"
-    android:layout_marginRight="5dp"
-    android:layout_marginBottom="5dp"
+    android:layout_marginLeft="4dp"
+    android:layout_marginRight="4dp"
+    android:layout_marginBottom="2dp"
     android:layout_height="match_parent">
 
         <android.support.v7.widget.CardView
@@ -20,35 +19,41 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-
-
                 <ImageView
                     android:src="@drawable/wp_icon"
                     android:id="@+id/wcIcon"
                     android:layout_centerVertical="true"
+                    android:padding="4dp"
                     android:layout_width="56dp"
                     android:layout_height="56dp" />
-                <TextView
-                    android:textSize="20sp"
-                    android:id="@+id/up_wc_title"
+                <LinearLayout
+                    android:layout_centerVertical="true"
+                    android:orientation="vertical"
                     android:layout_toRightOf="@+id/wcIcon"
+                    android:layout_marginLeft="10dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+                <TextView
+                    android:textSize="16sp"
+                    android:textColor="#ff575757"
+                    android:id="@+id/up_wc_title"
                     android:layout_width="match_parent"
                     android:text="WordCamp London"
-                    android:layout_marginLeft="10dp"
                     android:layout_height="match_parent" />
                 <TextView
                     android:id="@+id/up_wc_dates"
-                    android:textSize="15sp"
+                    android:textSize="12sp"
                     android:layout_toRightOf="@+id/wcIcon"
-                    android:layout_below="@+id/up_wc_title"
                     android:text="Jan 5- Jan 9"
-                    android:layout_marginLeft="10dp"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" />
+                </LinearLayout>
                 <ImageView
+                    android:id="@+id/bookmark"
+                    android:padding="5dp"
                     android:layout_marginRight="10dp"
                     android:layout_alignParentRight="true"
-                    android:src="@drawable/ic_bookmark_outline_grey600_36dp"
+                    android:src="@drawable/ic_bookmark_outline_grey600_24dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" />
             </RelativeLayout>
