--- a/app/src/main/res/layout/activity_base.xml
+++ b/app/src/main/res/layout/activity_base.xml
@@ -1,19 +1,18 @@
-<com.github.ksoichiro.android.observablescrollview.TouchInterceptionFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <FrameLayout
+    <RelativeLayout
         android:id="@+id/pager_wrapper"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
         <android.support.v4.view.ViewPager
             android:id="@+id/pager"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
-    </FrameLayout>
+    </RelativeLayout>
 
     <LinearLayout
         android:id="@+id/header"
@@ -21,7 +20,6 @@
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
         android:orientation="vertical">
-
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
@@ -30,11 +28,10 @@
             android:minHeight="?attr/actionBarSize"
             app:theme="@style/SlidingLayoutTab"
             app:popupTheme="@style/SlidingLayoutTabPopUp"/>
-
         <org.wordcamp.widgets.SlidingTabLayout
             android:id="@+id/sliding_tabs"
             android:layout_width="match_parent"
             android:layout_height="@dimen/tab_height" />
     </LinearLayout>
 
-</com.github.ksoichiro.android.observablescrollview.TouchInterceptionFrameLayout>
+</FrameLayout>
