--- a/app/src/main/res/layout/fragment_upcoming_wc.xml
+++ b/app/src/main/res/layout/fragment_upcoming_wc.xml
@@ -1,5 +1,6 @@
-<com.github.ksoichiro.android.observablescrollview.ObservableRecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+<ListView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/scroll"
+    android:divider="@null"
     android:layout_marginTop="2dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
