--- a/app/src/main/res/layout/upcoming_wc_card.xml
+++ b/app/src/main/res/layout/upcoming_wc_card.xml
@@ -15,7 +15,7 @@
             card_view:cardCornerRadius="4dp" >
 
             <RelativeLayout
-                android:clickable="true"
+                android:id="@+id/layoutContainer"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
