--- a/app/src/main/res/menu/menu_base_act.xml
+++ b/app/src/main/res/menu/menu_base_act.xml
@@ -4,5 +4,7 @@
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
 
-    <item android:id="@+id/action_refresh" android:title="@string/action_refresh" app:showAsAction="always" />
+    <item android:id="@+id/action_refresh"
+        android:icon="@drawable/ic_refresh_white_36dp"
+        android:title="@string/action_refresh" app:showAsAction="always" />
 </menu>
