--- a/app/src/main/res/drawable/red_delete_background.xml
+++ b/app/src/main/res/drawable/red_delete_background.xml
@@ -4,5 +4,7 @@
     android:shape="oval">
 
     <solid android:color="@color/accent"/>
-
+    <size
+        android:width="50dp"
+        android:height="50dp"/>
 </shape>
