--- a/app/src/main/res/layout/my_wc_card.xml
+++ b/app/src/main/res/layout/my_wc_card.xml
@@ -27,12 +27,12 @@
                     android:layout_width="56dp"
                     android:layout_height="56dp" />
                 <ImageView
-                    android:src="@drawable/ic_delete_white_18dp"
+                    android:src="@drawable/ic_delete_white_48dp"
                     android:id="@+id/wcDelete"
                     android:visibility="gone"
                     android:background="@drawable/red_delete_background"
                     android:layout_centerVertical="true"
-                    android:layout_margin="4dp"
+                    android:padding="10dp"
                     android:layout_width="50dp"
                     android:layout_height="50dp" />
                 <LinearLayout
