--- a/app/src/main/res/layout/fragment_upcoming_wc.xml
+++ b/app/src/main/res/layout/fragment_upcoming_wc.xml
@@ -1,7 +1,13 @@
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/scroll"
-    android:divider="@null"
-    android:layout_marginTop="2dp"
+<android.support.v4.widget.SwipeRefreshLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/swipe_refresh_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:scrollbars="vertical" />
+    android:layout_height="wrap_content">
+    <ListView
+        android:id="@+id/scroll"
+        android:divider="@null"
+        android:layout_marginTop="2dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="vertical" />
+</android.support.v4.widget.SwipeRefreshLayout>
