--- a/app/src/main/res/layout/item_session_by_speaker.xml
+++ b/app/src/main/res/layout/item_session_by_speaker.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="48dp">
+    android:layout_height="wrap_content"
+    android:minHeight="48dp">
 <TextView
     android:layout_centerVertical="true"
     android:layout_marginLeft="16dp"
@@ -9,6 +10,8 @@
     android:textSize="16sp"
     android:textColor="@color/accent_dark"
     android:id="@+id/item_session"
+    android:maxLines="2"
+    android:ellipsize="end"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content" />
 </RelativeLayout>
