show pic of speaker in session detail with zoom animation

--- a/app/src/main/res/layout/activity_speaker_detail.xml
+++ b/app/src/main/res/layout/activity_speaker_detail.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:id="@+id/mainLayout"
     android:layout_width="match_parent"
     android:layout_height="fill_parent">
     <LinearLayout
@@ -17,7 +18,6 @@
             android:background="?attr/colorPrimary"
             app:theme="@style/SlidingLayoutTab"
             app:popupTheme="@style/SlidingLayoutTabPopUp"/>
-
     </LinearLayout>
 
     <LinearLayout
@@ -34,4 +34,19 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent" />
     </LinearLayout>
+    <RelativeLayout
+        android:id="@+id/layout_zoom"
+        android:visibility="gone"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+
+        <org.wordcamp.widgets.CircularImageView
+            android:id="@+id/zoomProfilePic"
+            android:clickable="true"
+            android:background="#fff"
+            android:layout_marginTop="?attr/actionBarSize"
+            android:padding="?attr/actionBarSize"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"/>
+    </RelativeLayout>
 </RelativeLayout>
