--- a/app/src/main/res/menu/menu_wc_detail.xml
+++ b/app/src/main/res/menu/menu_wc_detail.xml
@@ -5,7 +5,7 @@
         app:showAsAction="always" />
     <item android:id="@+id/action_refresh" android:title="Refresh"
         android:icon="@drawable/ic_refresh_white_36dp"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
     <item android:id="@+id/item_menu_sponsor" android:title="@string/item_sponsor"
         android:orderInCategory="50" app:showAsAction="never" />
     <item android:id="@+id/item_menu_organiser" android:title="@string/item_organisers"
