--- a/app/src/main/res/layout/item_session_new.xml
+++ b/app/src/main/res/layout/item_session_new.xml
@@ -36,8 +36,8 @@
     <ImageView
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:layout_margin="16dp"
         android:src="@drawable/heart"
+        android:padding="15dp"
         android:id="@+id/favorite"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
