--- a/app/src/main/res/layout/upcoming_wc_card.xml
+++ b/app/src/main/res/layout/upcoming_wc_card.xml
@@ -52,8 +52,9 @@
                 </LinearLayout>
                 <ImageView
                     android:id="@+id/bookmark"
-                    android:padding="5dp"
-                    android:layout_marginRight="10dp"
+                    android:paddingBottom="16dp"
+                    android:paddingRight="16dp"
+                    android:paddingLeft="16dp"
                     android:layout_alignParentRight="true"
                     android:src="@drawable/ic_bookmark_outline_grey600_24dp"
                     android:layout_width="wrap_content"
