--- a/app/src/main/res/menu/menu_wc_detail.xml
+++ b/app/src/main/res/menu/menu_wc_detail.xml
@@ -3,12 +3,12 @@
     <item android:id="@+id/action_attending" android:title="@string/item_attending"
         android:icon="@drawable/ic_star_outline_white_36dp"
         app:showAsAction="always" />
-    <item android:id="@+id/action_refresh" android:title="Refresh"
+    <item android:id="@+id/action_refresh" android:title="@string/refresh"
         android:icon="@drawable/ic_refresh_white_36dp"
         app:showAsAction="ifRoom" />
-    <item android:id="@+id/item_menu_sponsor" android:title="@string/item_sponsor"
+    <item android:id="@+id/item_menu_website" android:title="@string/webversion"
         android:orderInCategory="50" app:showAsAction="never" />
-    <item android:id="@+id/item_menu_organiser" android:title="@string/item_organisers"
+    <item android:id="@+id/item_menu_feedback" android:title="@string/feedback"
         android:orderInCategory="51" app:showAsAction="never" />
     <item android:id="@+id/item_menu_contact" android:title="@string/item_contact"
         android:orderInCategory="52" app:showAsAction="never" />
