--- a/app/src/main/res/layout/fragment_wcdetails_speaker.xml
+++ b/app/src/main/res/layout/fragment_wcdetails_speaker.xml
@@ -2,7 +2,7 @@
 <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/swipe_refresh_layout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
 
     <ListView
         android:id="@+id/speaker_list"
@@ -10,6 +10,13 @@
         android:layout_marginTop="2dp"
         android:scrollbars="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
+        android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/empty_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:text="Speakers yet to be announced"
+        android:gravity="center_vertical|center_horizontal"
+        android:textSize="25sp" />
 </android.support.v4.widget.SwipeRefreshLayout>
