--- a/app/src/main/res/layout/fragment_wcdetails_speaker.xml
+++ b/app/src/main/res/layout/fragment_wcdetails_speaker.xml
@@ -1,22 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/swipe_refresh_layout"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-    <ListView
-        android:id="@+id/speaker_list"
-        android:divider="@null"
-        android:layout_marginTop="2dp"
-        android:scrollbars="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
     <TextView
         android:id="@+id/empty_view"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="gone"
-        android:text="Speakers yet to be announced"
-        android:gravity="center_vertical|center_horizontal"
-        android:textSize="25sp" />
-</android.support.v4.widget.SwipeRefreshLayout>
+        android:layout_centerInParent="true"
+        android:textColor="@color/secondary_text_color"
+        android:text="@string/speaker_to_be_announced"
+        android:textSize="25sp"
+        android:visibility="gone" />
+
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_refresh_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ListView
+            android:id="@+id/speaker_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
+            android:divider="@null"
+            android:scrollbars="vertical" />
+
+    </android.support.v4.widget.SwipeRefreshLayout>
+
+</RelativeLayout>
