--- a/app/src/main/res/layout/item_speaker.xml
+++ b/app/src/main/res/layout/item_speaker.xml
@@ -26,11 +26,10 @@
                 android:layout_height="60dp" />
 
             <TextView
-                android:fontFamily="sans-serif"
                 android:textSize="16sp"
                 android:id="@+id/speaker_title"
                 android:layout_width="match_parent"
-                android:text="WordCamp London"
+                android:textColor="@color/text_color"
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="16dp"
                 android:layout_height="wrap_content" />
