--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="emerald">#2ecc71</color>
     <color name="black_overlay">#66000000</color>
 
-    <color name="text_color">#212121</color>
+    <color name="text_color">#ff313131</color>
     <color name="secondary_text_color">#727272</color>
     <color name="hint_text_color">#B8B8B8</color>
 
@@ -16,5 +16,7 @@
     <color name="flat_green">#5CBC6B</color>
     <color name="flat_green_dark">#43A047</color>
     <color name="flat_pink">#f67280</color>
+    <color name="flat_light_blue">#90caf9</color>
+    <color name="flat_light_pink">#f48fb1</color>
     <color name="dividers">#DBDBDB</color>
 </resources>
