--- a/app/src/main/res/layout/item_header_speaker.xml
+++ b/app/src/main/res/layout/item_header_speaker.xml
@@ -1,39 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
         <org.wordcamp.widgets.CircularImageView
-            android:src="@drawable/wp_icon"
             android:id="@+id/speaker_dp"
-            android:layout_marginLeft="16dp"
-            android:layout_centerVertical="true"
             android:layout_width="60dp"
-            android:layout_height="60dp" />
+            android:layout_height="60dp"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:src="@drawable/wp_icon" />
+
         <TextView
-            android:layout_marginLeft="16dp"
             android:id="@+id/speaker_detail"
-            android:textSize="14sp"
-            android:textColor="#ff515151"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:textColor="@color/secondary_text_color"
+            android:textSize="16sp" />
     </LinearLayout>
+
     <ImageView
-        android:layout_marginTop="8dp"
-        android:layout_marginRight="16dp"
-        android:background="@drawable/line"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/line" />
+
     <TextView
-        android:layout_marginTop="16dp"
         android:id="@+id/session_title"
-        android:textColor="#E64A19"
-        android:textSize="18sp"
-        android:text="Sessions"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Sessions"
+        android:textColor="#E64A19"
+        android:textSize="18sp" />
 </LinearLayout>
