--- a/app/src/main/res/layout/fragment_wcdetails_overview.xml
+++ b/app/src/main/res/layout/fragment_wcdetails_overview.xml
@@ -1,80 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
 <org.wordcamp.widgets.MaterialScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:background="#fff"
-    android:overScrollMode="never"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#fff"
+    android:overScrollMode="never">
+
     <LinearLayout
 
-        android:orientation="vertical" android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <LinearLayout
-            android:orientation="vertical"
             android:id="@+id/wc_image_container"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
             <ImageView
                 android:id="@+id/featuredImage"
-                android:src="@drawable/wclondon"
                 android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
                 android:scaleType="fitXY"
-                android:layout_height="fill_parent" />
+                android:src="@drawable/wclondon" />
         </LinearLayout>
+
         <android.support.v7.widget.CardView
             android:id="@+id/card_view"
-            android:layout_marginTop="-56dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            card_view:cardElevation="8dp"
-            card_view:cardCornerRadius="2dp" >
+            android:layout_marginLeft="8dp"
+
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="-56dp"
+            card_view:cardCornerRadius="2dp"
+            card_view:cardElevation="8dp">
+
             <LinearLayout
                 android:id="@+id/centerLayoutDetail"
-                android:padding="8dp"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
                 android:background="#fff"
                 android:orientation="vertical"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content">
+                android:padding="8dp">
 
                 <TextView
-                    android:layout_width="match_parent"
                     android:id="@+id/wc_loc_header"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:clickable="true"
                     android:focusable="true"
-                    android:textSize="20sp"
+                    android:text="@string/wc_location"
                     android:textColor="@color/flat_green_dark"
-                    android:layout_height="wrap_content"
-                    android:text="Location"
-                    />
+                    android:textSize="20sp" />
 
-                <TextView android:id="@+id/wc_location"
+                <TextView
+                    android:id="@+id/wc_location"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
-                    android:textSize="15sp"
-                    android:text="London Metropolitan University\n166-220 Holloway Rd, London N7 8DB,\nUnited Kingdom"
-                    />
-                <TextView android:layout_width="match_parent"
+                    android:textColor="@color/text_color"
+                    android:textSize="16sp" />
+
+                <TextView
                     android:id="@+id/wc_about_header"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:clickable="true"
                     android:focusable="true"
-                    android:textSize="20sp"
-                    android:layout_height="wrap_content"
-                    android:text="About:"
+                    android:text="@string/wc_about"
                     android:textColor="@color/flat_blue_dark"
-                    />
+                    android:textSize="20sp" />
 
-                <TextView android:id="@+id/wc_about"
+                <TextView
+                    android:id="@+id/wc_about"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="16dp"
-                    android:textSize="15sp"
-                    android:text="@string/lorem"
-                    />
+                    android:textColor="@color/text_color"
+                    android:textSize="16sp" />
 
             </LinearLayout>
         </android.support.v7.widget.CardView>
