--- a/app/src/main/res/layout/item_header_session.xml
+++ b/app/src/main/res/layout/item_header_session.xml
@@ -4,8 +4,8 @@
     android:layout_height="match_parent">
     <TextView
         android:id="@+id/wc_detail_abstract"
-        android:textSize="14sp"
-        android:textColor="#ff515151"
+        android:textSize="16sp"
+        android:textColor="@color/secondary_text_color"
         android:layout_marginTop="8dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
